--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "parcel-bundler": "^1.12.5"
   },
   "devDependencies": {
+    "elm-format": "^0.8.5",
     "elm-hot": "^1.1.6",
     "node-elm-compiler": "^5.0.5"
   }
