--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "elm-format": "^0.8.5",
     "elm-hot": "^1.1.6",
-    "node-elm-compiler": "^5.0.5"
+    "node-elm-compiler": "^5.0.5",
+    "sass": "^1.32.8"
   }
 }
