--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/tombolton96/elm-memory-game#readme",
   "dependencies": {
+    "dejavu-sans": "^1.0.0",
     "elm": "^0.19.1-5",
     "parcel-bundler": "^1.12.5"
   },
