--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "parcel src/index.html -d dev",
-    "build": "parcel build src/index.html --no-source-maps",
+    "start": "parcel src/index.html -d dev && cp -r src/cards dist/cards",
+    "build": "parcel build src/index.html --no-source-maps && cp -r src/cards dist/cards",
     "elm": "./node_modules/elm/bin/elm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
