--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "elm-memory-game",
+  "name": "elm-card-games",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "parcel src/index.html -d dev && cp -r src/cards dist/cards",
+    "start": "cp -r src/cards dev/cards && parcel src/index.html -d dev",
     "build": "parcel build src/index.html --no-source-maps && cp -r src/cards dist/cards",
     "elm": "./node_modules/elm/bin/elm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tombolton96/elm-memory-game.git"
+    "url": "git+https://github.com/tombolton96/elm-card-games.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tombolton96/elm-memory-game/issues"
+    "url": "https://github.com/tombolton96/elm-card-games/issues"
   },
-  "homepage": "https://github.com/tombolton96/elm-memory-game#readme",
+  "homepage": "https://github.com/tombolton96/elm-card-games#readme",
   "dependencies": {
     "dejavu-sans": "^1.0.0",
     "elm": "^0.19.1-5",
