--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "mkdir -p dev && cp -r src/cards dev/cards && parcel src/index.html -d dev",
-    "build": "mkdir -p dist && parcel build src/index.html --no-source-maps && cp -r src/cards dist/cards",
+    "start": "mkdir -p dev && cp -r src/cards dev/cards && cp -r public/* dev/ && parcel src/index.html -d dev",
+    "build": "mkdir -p dist && parcel build src/index.html --no-source-maps && cp -r src/cards dist/cards && cp -r public/* dist/",
     "elm": "./node_modules/elm/bin/elm",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tombolton96/elm-card-games.git"
+    "url": "git+https://github.com/abu-hiba/elm-card-games.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/tombolton96/elm-card-games/issues"
+    "url": "https://github.com/abu-hiba/elm-card-games/issues"
   },
-  "homepage": "https://github.com/tombolton96/elm-card-games#readme",
+  "homepage": "https://github.com/abu-hiba/elm-card-games#readme",
   "dependencies": {
     "dejavu-sans": "^1.0.0",
     "elm": "^0.19.1-5",
